--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,12 @@ button.modal-show {
   text-align: center;
   border: 2px solid #187b9c;
   outline: none;
+  cursor: pointer;
 }
 
 button.close {
   float: right;
-  margin: 3px 5px 0 0;
+  margin: 0 5px 0 0;
   border: none;
   background-color: transparent;
   background-repeat: no-repeat;
@@ -39,10 +40,6 @@ button.close {
   cursor: pointer;
 }
 
-button.modal-show:hover {
-  box-shadow: 5px 15px 25px grey;
-}
-
 .hidden {
   display: none;
 }
@@ -50,10 +47,13 @@ button.modal-show:hover {
 .modal-content {
   position: absolute;
   width: 500px;
+  max-width: 700px;
   height: 200px;
   max-height: 300px;
   text-align: center;
   background-color: white;
+  border-radius: 10px;
+  box-shadow: 5px 15px 25px black;
   z-index: 10;
 }
 
@@ -66,4 +66,15 @@ button.modal-show:hover {
   background-color: rgb(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
   z-index: 5;
+}
+
+span {
+  position: relative;
+  top: 10px;
+  font-size: 25px;
+}
+
+p {
+  margin-top: 25px;
+  width: auto;
 }
